SyntacticAnalyzer/tests/fail/metodo.java
class foo {
	// ;
	static boolean method1();
	{
	}

}
